--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulasi repo git</title>
-    <link rel="stylesheet" href="style.css">
+   <style type="text/css"></style>
+   body {
+    font-family:Arial, Helvetica, sans-serif ;
+}
 </head>
 <body>
     <h1>simulasi repo git</h1>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
